구조 및 틀 완료

--- a/main.html
+++ b/main.html
@@ -4,9 +4,185 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DEVELOPER EUISUB SHIN</title>
+
+    <!-- link css & js -->
+    <link rel="stylesheet" href="./css/reset.css"/>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <script src="https://kit.fontawesome.com/9b8d39b05b.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <header>
+        <section class="d-flex jc-space-between">
+            <div class="w50f ta-center as-cneter">
+                <img src="./images/num_1.png"  alt="logo"/>
+            </div>
+            <div class="w10f"></div>
+            <div class="w40f">
+                <h3>끊임없이 노력ㆍ도전ㆍ열정을 다하는 개발자. 신의섭</h3>
+                <h1>SHIN EUI SUB</h1>
+                <ul>
+                    <li>
+                        <i class="fa fa-solid fa-star"></i>
+                        1992.08.21
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-phone"></i>
+                        010 9016 9278
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-at"></i>
+                        euisub.dev@gmail.com
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-street-view"></i>
+                        인천광역시 서구 심곡로
+                    </li>
+                    <li>
+                        <i class="fa fa-solid fa-building"></i>
+                        (주)유니포스 재직중
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </header>
+    <main>
+        <article>
+            <hr/>
+            <!-- Inroduction start -->
+            <section id="Inroduction" class="d-flex">
+                <div class="w30f">
+                    <h2>Introduction</h2>
+                </div>
+                <div class="w70f">
+                    <ul>
+                        <li>안녕하세요 1년 차 백앤드 개발자 신의섭입니다.</li>
+                        <li>불편함과 귀찮음을 편안함으로 만들어주는 것에 뿌듯함을 느끼고</li>
+                        <li>Clean Code를 통해 유지보수에 대해 고민하며</li>
+                        <li>꾸준한 성장을 위해 1일 1 Blog, 3일 1 Commit 운동을 하고있습니다.</li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Inroduction end -->
+            <hr/>
+            <!-- Channel start -->
+            <section id="Channel"  class="d-flex">
+                <div class="w30f">
+                    <h2>Contact & Channel</h2>
+                </div>
+                <div class="w70f">
+                    <ul>
+                        <li>github : <a href="https://github.com/euisub-dev">github.com/euisub-dev</a></li>
+                        <li>blog : <a href="https://euisub-dev.tistory.com/">euisub-dev.tistory.com/</a></li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Channel end -->
+            <hr/>
+            <!-- Skills start -->
+            <article id="Skills">
+                <section id="Backend"  class="d-flex">
+                    <div class="w30f">
+                        <h2>Backend</h2>
+                    </div>
+                    <div class="w70f">
+                        <ul>
+                            <li>JAVA</li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="DevOps"  class="d-flex">
+                    <div class="w30f">
+                        <h2>DevOps</h2>
+                    </div>
+                    <div class="w70f">
+                        <ul>
+                            <li>JAVA</li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="Frontend"  class="d-flex">
+                    <div class="w30f">
+                        <h2>Frontend</h2>
+                    </div>
+                    <div class="w70f">
+                        <ul>
+                            <li>JAVA</li>
+                        </ul>
+                    </div>
+                </section>
+                <section id="Collaboration"  class="d-flex">
+                    <div class="w30f">
+                        <h2>Collaboration</h2>
+                    </div>
+                    <div class="w70f">
+                        <ul>
+                            <li>JAVA</li>
+                        </ul>
+                    </div>
+                </section>
+            </article>
+            <!-- Skills end -->
+            <hr/>
+            <!-- Work Experience start -->
+            <p class="coment">
+                ※ 해당 글을 클릭하면 자세히 볼 수 있습니다.
+            </p>
+            <section id="Work"  class="d-flex">
+                <div class="w30f">
+                    <h2>Work Experience<br/>& Projects</h2>
+                </div>
+                <div class="w70f">
+                    <ul>
+                        <li>JAVA</li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Work Experience end -->
+            <hr/>
+            <!-- Personal Experience start -->
+            <p class="coment">
+                ※ 해당 글을 클릭하면 자세히 볼 수 있습니다.
+            </p>
+            <section id="Personal"  class="d-flex">
+                <div class="w30f">
+                    <h2>Personal Experience<br/>& Projects</h2>
+                </div>
+                <div class="w70f">
+                    <ul>
+                        <li>꿈해몽. 로또번호생성기</li>
+                        <li>추억의 이름궁합</li>
+                        <li>개관상 테스트</li>
+                        <li>FunFun한 Puzzle Game</li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Personal Experience end -->
+            <hr/>
+            <!-- Education start -->
+            <section id="Education"  class="d-flex">
+                <div class="w30f">
+                    <h2>Education</h2>
+                </div>
+                <div class="w70f">
+                    <ul>
+                        <li>울산과학대학교 컴퓨터정보학부 (2011.03 ~ 2016.02)</li>
+                        <li>
+                            <ul>
+                                <li>학점 : 4.34 / 4.5</li>
+                                <li>전자정부 표준 프레임워크 개발자 과정 (2015-07-17 ~ 2015-11-25)</li>
+                                <li>교내 캡스턴디자인 대회 최우수상</li>
+                                <li>Soteria systems 해외인턴십 (2015-11 ~ 2016-04 )</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Education end -->
+        </article>
+    </main>
+    <footer>
+        <script type="text/javascript" src="./js/main.js"></script>
+    </footer>
 </body>
 </html>
